Keep up with register changes

BUG:390593
FIXED-IN:5.0.1